--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="jumbotron center">
+  <h2>welcome to my pinterest, <%= current_user.name.truncate(12) if current_user %></h2>
+  <p>Find me in app/views/home/index.html.erb</p>
+  <% if user_signed_in? %>
+    <%= link_to "List Pins", pins_path,class:'btn btn-default' %>
+    <%= link_to "Add Pin", new_pin_path,class:'btn btn-default' %>
+    <%= link_to 'Edit profile',edit_user_registration_path,class:'btn btn-primary' %>
+  <% else  %>
+    <%= link_to 'Login',new_user_session_path,class:'btn btn-default' %>
+     <%= link_to 'Join',new_user_registration_path,class:'btn btn-primary' %>
+  <% end  %>
+</div>
