--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'home/header' %>
+    <div class="container">
+       <%= render partial: "shared/flash_messages", flash: flash %>
+       <%= yield %>
+    </div>
+   
   </body>
 </html>
