--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -38,7 +38,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Home',root_path %></li>
         <li><%= link_to 'About',home_about_path %></li>
-
+        <% if user_signed_in?  %>
+          <li><%= link_to "List Pins", pins_path %></li>
+          <li><%= link_to "Add Pins", new_pin_path %></li>
+          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+          <li><%= link_to "Log Out", destroy_user_session_path %></li>
+        <% else  %>
+          <li><%= link_to "Log In", new_user_session_path %></li>
+          <li><%= link_to "Join", new_user_registration_path %></li>
+        <% end  %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
