--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -10,10 +10,15 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  
+  <div class="form-group">
+    <%= form.label :image %>
+    <%= form.file_field :image, class:'form-control' %>
+  </div>
+  
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description, id: :pin_description %>
+    <%= form.text_field :description, id: :pin_description,class:'form-control' %>
   </div>
 
   <div class="actions">
