--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag @pin.image.url(:medium) %>
   <strong>Description:</strong>
   <%= @pin.description %>
 </p>
-
-<%= link_to 'Edit', edit_pin_path(@pin) %> |
+<% if current_user == @pin.user  %>
+  <%= link_to 'Edit', edit_pin_path(@pin) %> |
+<% end  %>
 <%= link_to 'Back', pins_path %>
