--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -21,3 +21,6 @@
     
   <% end %>
 </div>
+<div class="container center">
+  <%= will_paginate @pins , renderer: BootstrapPagination::Rails%>
+</div>
