--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -44,6 +44,7 @@
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
           <li><%= link_to "Log Out", destroy_user_session_path,method: :delete %></li>
         <% else  %>
+          <li><%= link_to "List Pins", pins_path %></li>
           <li><%= link_to "Log In", new_user_session_path %></li>
           <li><%= link_to "Join", new_user_registration_path %></li>
         <% end  %>
