--- a/app/views/home/_jumbo.html.erb
+++ b/app/views/home/_jumbo.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">
-  <h2>welcome to my pinterest, <%#= current_user.name if current_user %></h2>
-  <p>Find me in app/views/home/index.html.erb</p>
+  <h2>welcome to my pinterest, <%= current_user.name if current_user %></h2>
+  <p>This is super cool</p>
   <% if user_signed_in? %>
     <%= link_to "List Pins", pins_path,class:'btn btn-default' %>
     <%= link_to "Add Pin", new_pin_path,class:'btn btn-default' %>
